add ledgerProofEnabled since it is false by default

--- a/conf/scalardl-custom-values.yaml
+++ b/conf/scalardl-custom-values.yaml
@@ -82,6 +82,7 @@ ledger:
     # dbPassword: <AWS_ACCESS_SECRET_KEY>
 
     # To use Auditor
+    # ledgerProofEnabled: true
     # ledgerAuditorEnabled: true
 
   prometheusRule:
