--- a/conf/scalardl-audit-custom-values.yaml
+++ b/conf/scalardl-audit-custom-values.yaml
@@ -41,7 +41,7 @@ envoy:
                 - key: app.kubernetes.io/name
                   operator: In
                   values:
-                    - scalardl
+                    - scalardl-audit
                 - key: app.kubernetes.io/app
                   operator: In
                   values:
