--- a/playbooks/roles/kubectl/tasks/requirement.yml
+++ b/playbooks/roles/kubectl/tasks/requirement.yml
@@ -2,3 +2,4 @@
 - name: Install python library requirements for kubernetes
   pip:
     name: "{{ python_package }}"
+    extra_args: "--ignore-installed pyyaml"
