--- a/conf/scalardb-custom-values.yaml
+++ b/conf/scalardb-custom-values.yaml
@@ -9,7 +9,15 @@ envoy:
 
   grafanaDashboard:
     enabled: false
-    
+
+  service:
+    type: LoadBalancer
+    annotations:
+      service.beta.kubernetes.io/azure-load-balancer-internal: "true"
+      service.beta.kubernetes.io/azure-load-balancer-internal-subnet: "k8s_ingress"
+      service.beta.kubernetes.io/aws-load-balancer-internal: "true"
+      service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
+
   resources: {}
     
   affinity:
