--- a/conf/scalardl-custom-values.yaml
+++ b/conf/scalardl-custom-values.yaml
@@ -14,40 +14,37 @@ envoy:
     type: LoadBalancer
     annotations:
       service.beta.kubernetes.io/azure-load-balancer-internal: "true"
-      service.beta.kubernetes.io/azure-load-balancer-internal-subnet: "k8s_ingress"
       service.beta.kubernetes.io/aws-load-balancer-internal: "true"
       service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
 
   tolerations:
     - effect: NoSchedule
-      key: kubernetes.io/app
+      key: scalar-labs.com/dedicated-node
       operator: Equal
-      value: scalardlpool
+      value: scalardl-ledger
 
   affinity:
     nodeAffinity:
       requiredDuringSchedulingIgnoredDuringExecution:
         nodeSelectorTerms:
           - matchExpressions:
-              - key: agentpool
+              - key: scalar-labs.com/dedicated-node
                 operator: In
                 values:
-                  - scalardlpool
+                  - scalardl-ledger
     podAntiAffinity:
-      preferredDuringSchedulingIgnoredDuringExecution:
-        - podAffinityTerm:
-            labelSelector:
-              matchExpressions:
-                - key: app.kubernetes.io/name
-                  operator: In
-                  values:
-                    - scalardl
-                - key: app.kubernetes.io/app
-                  operator: In
-                  values:
-                    - envoy
-            topologyKey: kubernetes.io/hostname
-          weight: 50
+      requiredDuringSchedulingIgnoredDuringExecution:
+        - labelSelector:
+            matchExpressions:
+              - key: app.kubernetes.io/name
+                operator: In
+                values:
+                  - scalardl
+              - key: app.kubernetes.io/app
+                operator: In
+                values:
+                  - envoy
+          topologyKey: kubernetes.io/hostname
 
   resources:
     requests:
@@ -64,7 +61,6 @@ ledger:
     - name: reg-docker-secrets
 
   scalarLedgerConfiguration:
-    dbContactPoints: cassandra-lb.internal.scalar-labs.com
 
     #
     # Cosmos DB
@@ -98,39 +94,37 @@ ledger:
 
   tolerations:
     - effect: NoSchedule
-      key: kubernetes.io/app
+      key: scalar-labs.com/dedicated-node
       operator: Equal
-      value: scalardlpool
+      value: scalardl-ledger
 
   affinity:
     nodeAffinity:
       requiredDuringSchedulingIgnoredDuringExecution:
         nodeSelectorTerms:
           - matchExpressions:
-              - key: agentpool
+              - key: scalar-labs.com/dedicated-node
                 operator: In
                 values:
-                  - scalardlpool
+                  - scalardl-ledger
     podAntiAffinity:
-      preferredDuringSchedulingIgnoredDuringExecution:
-        - podAffinityTerm:
-            labelSelector:
-              matchExpressions:
-                - key: app.kubernetes.io/name
-                  operator: In
-                  values:
-                    - scalardl
-                - key: app.kubernetes.io/app
-                  operator: In
-                  values:
-                    - ledger
-            topologyKey: kubernetes.io/hostname
-          weight: 50
+      requiredDuringSchedulingIgnoredDuringExecution:
+        - labelSelector:
+            matchExpressions:
+              - key: app.kubernetes.io/name
+                operator: In
+                values:
+                  - scalardl
+              - key: app.kubernetes.io/app
+                operator: In
+                values:
+                  - ledger
+          topologyKey: kubernetes.io/hostname
 
   resources:
     requests:
-      cpu: 1000m
-      memory: 2Gi
+      cpu: 2000m
+      memory: 4Gi
     limits:
-      cpu: 1500m
-      memory: 3Gi
+      cpu: 2000m
+      memory: 4Gi
