--- a/conf/scalar-loki-stack-custom-values.yaml
+++ b/conf/scalar-loki-stack-custom-values.yaml
@@ -17,9 +17,9 @@ promtail:
     snippets:
       # -- `scapeConfigs` is exactly the part of https://grafana.com/docs/loki/latest/clients/promtail/configuration/#scrape_configs
       # -- The value will be created as a Kubernetes ConfigMap and then mounted to the Promtail Pod.
-      # -- Not really need to change this value. It's set to scrape all logs of Scalar DL/DB Pods by using regular expression.
+      # -- Not really need to change this value. It's set to scrape all logs of ScalarDL or ScalarDB Pods by using regular expression.
       scrapeConfigs: |
-        # -- the `scalardl` job scrapes all the logs from Scalar Ledger Pods, Scalar Auditor Pods, and the corresponding Envoy Pods
+        # -- the `scalardl` job scrapes all the logs from ScalarDL Ledger Pods, ScalarDL Auditor Pods, and the corresponding Envoy Pods
         - job_name: scalardl
           pipeline_stages:
             - docker: {}
@@ -43,7 +43,7 @@ promtail:
                 - __meta_kubernetes_pod_uid
                 - __meta_kubernetes_pod_container_name
               target_label: __path__
-        # -- the `scalardb` job scrapes all the logs of Scalar DB Server Pods and the corresponding Envoy Pods
+        # -- the `scalardb` job scrapes all the logs of ScalarDB Server Pods and the corresponding Envoy Pods
         - job_name: scalardb
           pipeline_stages:
             - docker: {}
