--- a/conf/scalardb-graphql-custom-values.yaml
+++ b/conf/scalardb-graphql-custom-values.yaml
@@ -39,12 +39,6 @@ prometheusRule:
 grafanaDashboard:
   enabled: false
 
-tolerations:
-  - effect: NoSchedule
-    key: scalar-labs.com/dedicated-node
-    operator: Equal
-    value: scalardb
-
 resources:
   requests:
     cpu: 2000m
@@ -54,22 +48,16 @@ resources:
     memory: 4Gi
 
 affinity:
-  nodeAffinity:
-    requiredDuringSchedulingIgnoredDuringExecution:
-      nodeSelectorTerms:
-        - matchExpressions:
-            - key: scalar-labs.com/dedicated-node
-              operator: In
-              values:
-                - scalardb
   podAntiAffinity:
-    requiredDuringSchedulingIgnoredDuringExecution:
-      - labelSelector:
-          matchExpressions:
-            - key: app.kubernetes.io/app
-              operator: In
-              values:
-                - scalardb-graphql
-        topologyKey: kubernetes.io/hostname
+    preferredDuringSchedulingIgnoredDuringExecution:
+      - podAffinityTerm:
+          labelSelector:
+            matchExpressions:
+              - key: app.kubernetes.io/app
+                operator: In
+                values:
+                  - scalardb-graphql
+          topologyKey: kubernetes.io/hostname
+        weight: 50
 
 existingSecret: ""
